# optimization

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
optimization/: algorithms.py  test.py
