[metadata]
name = optimization
version = 0.1.0
author = Alex Gisi
author_email = apgisi11@gmail.com
description = A Python package for black-box optimization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexgisi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy

[options.packages.find]
where = .
